# 2be

./: .gitattributes  .gitignore  CHANGES.md  CMakeLists.txt  LICENSE  README.md  adjust_tags.sh  build_cmake.sh  clean_cmake.sh  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_examples.sh  run_all_scratch_tests.sh  run_all_unit_tests.sh
.github/workflows/: c-cpp.yml
.sis/: script_info_lines.txt
cmake/: TargetMacros.cmake
examples/: CMakeLists.txt
include/2be/: 2be.h
src/: 2be.c  CMakeLists.txt  truthy.c
test/: CMakeLists.txt
test/scratch/libver/: main.cpp
test/unit/test.unit.truthy/: CMakeLists.txt  entry.c
